added tool tips but marble case now broken

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -108,14 +108,14 @@ also cause a white space at bottom because now contributes to the height-->
 
     <div class="cardTechMarbleImgHolder" >
     <!--   <div class="aMarble aMarbleGlassEffect"value="CSS"><img class="aMarbleImg " src="Images\marbles\css.png" alt="css marble"></div> -->
-                                           <Img class="cardTechlinksImg aMarble" src= "" alt="gitLink" value="Atom">
+                                           <Img class="cardTechlinksImg aMarble" src= "" alt="gitLink" value="Atom"  data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech">
 </div>
 
   </template>
 
   <template id="cardHyperlinkTemplate">
 
-<a alt="" href="" target="_blank" onclick="anchorClick();"  > <Img class="cardHyperlinksImg"  alt="gitLink" ></a>
+<a alt="" href="" target="_blank" onclick="anchorClick();"   data-toggle="tooltip" data-placement="top" title="link with more details on this project"> <Img class="cardHyperlinksImg"  alt="gitLink" ></a>
 
   </template>
 
@@ -127,9 +127,9 @@ also cause a white space at bottom because now contributes to the height-->
     <!--something i read said use button because comes with lots of good defaults but im struggling with them-->
     <!--want an arrow that underlines text-->
 
-    <div class="case2position">
+    <div class="case2position"data-toggle="tooltip" data-placement="left" title="drag the display case in and out to see the tech marbles">
 
-      <div class="handle"></div>
+      <div class="handle" ></div>
       <div class="case2border ">
 
 
@@ -143,18 +143,18 @@ also cause a white space at bottom because now contributes to the height-->
 
         <ul class="myflex-container">
 
-          <li>   <div class="aMarble aMarbleGlassEffect"value="Codepen"><img class="aMarbleImg " src="Images\marbles\codepen.png" alt="codepen marble"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="Atom"><img class="aMarbleImg " src="Images\marbles\atom-4-logo-png-transparent.png" alt="atom marble"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="C#"><img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble"></div></li>
+          <li>   <div class="aMarble aMarbleGlassEffect"value="Codepen"><img class="aMarbleImg " src="Images\marbles\codepen.png" alt="codepen marble" data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="Atom"><img class="aMarbleImg " src="Images\marbles\atom-4-logo-png-transparent.png" alt="atom marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="C#"><img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
 
-          <li><div class="aMarble aMarbleGlassEffect"value="CSS"><img class="aMarbleImg " src="Images\marbles\css.png" alt="css marble"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="EJS"><img class="aMarbleImg " src="Images\marbles\ejslandscape.png" alt="ejs marble"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="Git"><img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="Html"><img class="aMarbleImg " src="Images\marbles\html.png" alt="html marble"></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="JS"><img class="aMarbleImg " src="Images\marbles\javascript-shield.png" alt="js marble"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="Mongo"><img class="aMarbleImg " src="Images\marbles\mongooselogo.jpg" alt="mongoose marble"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="nodeJS"><img class="aMarbleImg " src="Images\marbles\nodejs.png" alt="nodejs marble" ></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="Unity"><img class="aMarbleImg " src="Images\marbles\unity.png" alt="unity marble" ></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="CSS"><img class="aMarbleImg " src="Images\marbles\css.png" alt="css marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="EJS"><img class="aMarbleImg " src="Images\marbles\ejslandscape.png" alt="ejs marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="Git"><img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="Html"><img class="aMarbleImg " src="Images\marbles\html.png" alt="html marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="JS"><img class="aMarbleImg " src="Images\marbles\javascript-shield.png" alt="js marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="Mongo"><img class="aMarbleImg " src="Images\marbles\mongooselogo.jpg" alt="mongoose marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="nodeJS"><img class="aMarbleImg " src="Images\marbles\nodejs.png" alt="nodejs marble" data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"value="Unity"><img class="aMarbleImg " src="Images\marbles\unity.png" alt="unity marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech" ></div></li>
 
         </ul>
     <div class="glassEffect"></div>
@@ -244,7 +244,7 @@ maybe even ajoining a space for the marble
     <!--<i class="fas fa-sort-up"></i>-->
 
 
-    <button class="tabPage1To2 invisible">
+    <button class="tabPage1To2 invisible" data-toggle="tooltip" data-placement="top" title="Lets go to the next page">
 
       <i class="fas fa-caret-up"></i>
       <img class="philProfileMarbleImg " src="Images\marbles\wellItsAFace.png" alt="My Picture Marble tab">
@@ -299,21 +299,21 @@ changes to what it would of been if it had not been at an angle because of hover
         <div class="row drinkChoices">
 
 
-                      <button type="button" name="button" class="drinkButton col-md-1 colTight">
+                      <button type="button" name="button" class="drinkButton col-md-1 colTight"  data-toggle="tooltip" data-placement="top" title="Pick a drink :)">
                         <img id="shotGlass" class=" drinkImages" src="Images/shotGlass.png" alt="shot glass">
 
-                        <button type="button" name="button" class="drinkButton col-md-1 colTight">
+                        <button type="button" name="button" class="drinkButton col-md-1 colTight"  data-toggle="tooltip" data-placement="top" title="Pick a drink :)">
 
                           <img id="tea" class=" drinkImages" src="Images/tea.png" alt="tea">        </button>
 
 
-            <button type="button" name="button" class="drinkButton col-md-1 colTight">
+            <button type="button" name="button" class="drinkButton col-md-1 colTight" data-toggle="tooltip" data-placement="top" title="Pick a drink :)">
 
               <img id="cocktailOlive" class=" drinkImages" src="Images/cocktailOlive.png" alt="cocktail">
 
 
             </button>
-            <button type="button" name="button" class="drinkButton col-md-1 colTight">
+            <button type="button" name="button" class="drinkButton col-md-1 colTight" data-toggle="tooltip" data-placement="top" title="Pick a drink :)">
 
               <img id="wineGlassSimple" class=" drinkImages" src="Images/wineGlassSimple.png" alt="wine glass">
 
@@ -444,8 +444,8 @@ in 4.3.1 need use order and offset
 
 
 
-
-                    <div class="dial">
+<!--will tool tip slow it-->
+                    <div class="dial"  data-toggle="tooltip" data-placement="top" title="Turn me anticlockwise">
                       <img class="theMagnifierImg " src=" Images\myMagnifier.png" alt="a magnifier">
 
                     </div>
@@ -639,10 +639,10 @@ in 4.3.1 need use order and offset
 
 
       <div class="row" id="firstRowCornerNav">
-        <div class="col-sm-4">
+        <div class="col-sm-4" data-toggle="tooltip" data-placement="right" title="Under construction">
           <i class="fas fa-expand-arrows-alt corner-links" id="carouselOrFloatingBubbleMediaButtons"></i>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4" data-toggle="tooltip" data-placement="right" title="contact me link">
           <!--replace with other website contact form-->
           <a href="mailto:philip.r.tate@gmail.com?&subject=Cool%20website%20we%20want%20to%20offer%20you%20a%20job&body=Amazing%20job%20goes%20here!">
           <i class="far fa-envelope corner-links"></i></a>
@@ -650,7 +650,7 @@ in 4.3.1 need use order and offset
 
 
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4" data-toggle="tooltip" data-placement="right" title="Just a refreshment while you browse">
           <!--later will change source to the image they picked-->
 
           <img id="chosen-beverage" class="corner-links " src="Images/tea.png" alt="tea" >
@@ -659,7 +659,7 @@ in 4.3.1 need use order and offset
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-12" data-toggle="tooltip" data-placement="top" title="get my cv from gitHub">
            <a href="https://github.com/phy5prt/CV" target="_blank">
           <h1><i class="fas fa-file-download "></i></h1></a>
 
