--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -129,7 +129,7 @@ also cause a white space at bottom because now contributes to the height-->
 
     <div class="case2position"data-toggle="tooltip" data-placement="left" title="drag the display case in and out to see the tech marbles">
 
-      <div class="handle" ></div>
+      <div class="handle pulseAffordance" ></div>
       <div class="case2border ">
 
 
@@ -143,18 +143,18 @@ also cause a white space at bottom because now contributes to the height-->
 
         <ul class="myflex-container">
 
-          <li>   <div class="aMarble aMarbleGlassEffect"value="Codepen"><img class="aMarbleImg " src="Images\marbles\codepen.png" alt="codepen marble" data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="Atom"><img class="aMarbleImg " src="Images\marbles\atom-4-logo-png-transparent.png" alt="atom marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="C#"><img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech">   <div class="aMarble aMarbleGlassEffect"value="Codepen"><img class="aMarbleImg " src="Images\marbles\codepen.png" alt="codepen marble" ></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="Atom"><img class="aMarbleImg " src="Images\marbles\atom-4-logo-png-transparent.png" alt="atom marble"></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="C#"><img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble"></div></li>
 
-          <li><div class="aMarble aMarbleGlassEffect"value="CSS"><img class="aMarbleImg " src="Images\marbles\css.png" alt="css marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="EJS"><img class="aMarbleImg " src="Images\marbles\ejslandscape.png" alt="ejs marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="Git"><img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="Html"><img class="aMarbleImg " src="Images\marbles\html.png" alt="html marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="JS"><img class="aMarbleImg " src="Images\marbles\javascript-shield.png" alt="js marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="Mongo"><img class="aMarbleImg " src="Images\marbles\mongooselogo.jpg" alt="mongoose marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="nodeJS"><img class="aMarbleImg " src="Images\marbles\nodejs.png" alt="nodejs marble" data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"></div></li>
-          <li><div class="aMarble aMarbleGlassEffect"value="Unity"><img class="aMarbleImg " src="Images\marbles\unity.png" alt="unity marble"data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech" ></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="CSS"><img class="aMarbleImg " src="Images\marbles\css.png" alt="css marble"></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="EJS"><img class="aMarbleImg " src="Images\marbles\ejslandscape.png" alt="ejs marble"></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="Git"><img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble"></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="Html"><img class="aMarbleImg " src="Images\marbles\html.png" alt="html marble"></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="JS"><img class="aMarbleImg " src="Images\marbles\javascript-shield.png" alt="js marble"></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="Mongo"><img class="aMarbleImg " src="Images\marbles\mongooselogo.jpg" alt="mongoose marble"></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="nodeJS"><img class="aMarbleImg " src="Images\marbles\nodejs.png" alt="nodejs marble" ></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="Unity"><img class="aMarbleImg " src="Images\marbles\unity.png" alt="unity marble" ></div></li>
 
         </ul>
     <div class="glassEffect"></div>
@@ -181,7 +181,7 @@ giving it vh vw does not help however psx0y1 lower text box mostly keep its dist
 so maybe an angled containing div
 maybe even ajoining a space for the marble
 -->
-    <div class="pg2CardContainer">
+    <div class="pg2CardContainer pulseAffordance">
 
 <div class="scaleable-wrapper" >
           <div class="theExplanationCard">
@@ -244,7 +244,7 @@ maybe even ajoining a space for the marble
     <!--<i class="fas fa-sort-up"></i>-->
 
 
-    <button class="tabPage1To2 invisible" data-toggle="tooltip" data-placement="top" title="Lets go to the next page">
+    <button class="tabPage1To2 invisible pulseAffordance" data-toggle="tooltip" data-placement="top" title="Lets go to the next page">
 
       <i class="fas fa-caret-up"></i>
       <img class="philProfileMarbleImg " src="Images\marbles\wellItsAFace.png" alt="My Picture Marble tab">
@@ -445,7 +445,7 @@ in 4.3.1 need use order and offset
 
 
 <!--will tool tip slow it-->
-                    <div class="dial"  data-toggle="tooltip" data-placement="top" title="Turn me anticlockwise">
+                    <div class="dial pulseAffordance"  data-toggle="tooltip" data-placement="top" title="Turn me anticlockwise">
                       <img class="theMagnifierImg " src=" Images\myMagnifier.png" alt="a magnifier">
 
                     </div>
