--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -129,7 +129,7 @@ also cause a white space at bottom because now contributes to the height-->
 
     <div class="case2position"data-toggle="tooltip" data-placement="left" title="drag the display case in and out to see the tech marbles">
 
-      <div class="handle pulseAffordance" ></div>
+      <div class="handle pulseAffordanceDrop" ></div>
       <div class="case2border ">
 
 
@@ -181,7 +181,7 @@ giving it vh vw does not help however psx0y1 lower text box mostly keep its dist
 so maybe an angled containing div
 maybe even ajoining a space for the marble
 -->
-    <div class="pg2CardContainer pulseAffordance">
+    <div class="pg2CardContainer pulseAffordanceBoxStrong">
 
 <div class="scaleable-wrapper" >
           <div class="theExplanationCard">
@@ -244,7 +244,7 @@ maybe even ajoining a space for the marble
     <!--<i class="fas fa-sort-up"></i>-->
 
 
-    <button class="tabPage1To2 invisible pulseAffordance" data-toggle="tooltip" data-placement="top" title="Lets go to the next page">
+    <button class="tabPage1To2 invisible pulseAffordanceDrop" data-toggle="tooltip" data-placement="top" title="Lets go to the next page">
 
       <i class="fas fa-caret-up"></i>
       <img class="philProfileMarbleImg " src="Images\marbles\wellItsAFace.png" alt="My Picture Marble tab">
@@ -445,7 +445,7 @@ in 4.3.1 need use order and offset
 
 
 <!--will tool tip slow it-->
-                    <div class="dial pulseAffordance"  data-toggle="tooltip" data-placement="top" title="Turn me anticlockwise">
+                    <div class="dial pulseAffordanceBox"  data-toggle="tooltip" data-placement="top" title="Turn me anticlockwise">
                       <img class="theMagnifierImg " src=" Images\myMagnifier.png" alt="a magnifier">
 
                     </div>
