tweaked scroll to view so

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -445,7 +445,7 @@ in 4.3.1 need use order and offset
 
 
 <!--will tool tip slow it-->
-                    <div class="dial pulseAffordanceBox"  data-toggle="tooltip" data-placement="top" title="Turn me anticlockwise">
+                    <div class="dial "  data-toggle="tooltip" data-placement="top" title="Turn me anticlockwise">
                       <img class="theMagnifierImg " src=" Images\myMagnifier.png" alt="a magnifier">
 
                     </div>
