--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -628,17 +628,17 @@ in 4.3.1 need use order and offset
 
 
 
-  <section id="corner-nav" class="corner-background ">
+  <section id="corner-nav" class="cornerNav">
 
 
 
 
 
-    <div class="corner-table">
+    <div class="corner-table  ">
 
 
 
-      <div class="row" id="firstRowCornerNav">
+      <div class="row  " id="firstRowCornerNav">
         <div class="col-sm-4" data-toggle="tooltip" data-placement="right" title="Under construction">
           <i class="fas fa-expand-arrows-alt corner-links" id="carouselOrFloatingBubbleMediaButtons"></i>
         </div>
@@ -658,7 +658,7 @@ in 4.3.1 need use order and offset
 
         </div>
       </div>
-      <div class="row">
+      <div class="row  cornerBackground">
         <div class="col-sm-12" data-toggle="tooltip" data-placement="top" title="get my cv from gitHub">
            <a href="https://github.com/phy5prt/CV" target="_blank">
           <h1><i class="fas fa-file-download "></i></h1></a>
