--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -2275,7 +2275,7 @@ position:absolute;
   height: 100vh;
   width: 100vw;
   left: 100vw;
-    background: linear-gradient(195deg, white, plum 43%, plum,  yellow, yellow 45%, white);
+    background: linear-gradient(195deg, white, plum 43%,   yellow, yellow 45%, white);
   background-position: center;
 pointer-events: none;
 }
