marble pg2 now also triggers transition and example card display

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -233,7 +233,7 @@ maybe even ajoining a space for the marble
 
 
     <div class="pg2Text lower">
-      <div>What I Can Use</div>
+      <div>Tech I've Used</div>
       <div><img class="arrow right" src="Images\replaceGeometricArrow.png" alt="arrow right"><div>
     </div>
 
@@ -263,7 +263,7 @@ maybe even ajoining a space for the marble
 
       <!--lots issues with animations and transforms on same object overwriting so a
 div for x axis one for y and the image itself for spin-->
-      <div class="philProfileMarble aMarble" value="Me">
+      <div class="philProfileMarble aMarble" value="Me" id="myMarble">
 
 
         <div class="philProfileMarbleY">
