magnifier now magnifies!!!!!!!!!!!

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -30,7 +30,7 @@
 <!--class="noScroll"-->
 
 
-<body class="noScroll">
+<body>
 <!--
 <button class="test">ClickMe</button>
 -->
@@ -467,12 +467,12 @@ in 4.3.1 need use order and offset
           <div class="row flex-fill d-flex ">
 
 
-            <div class="  d-flex col-md-12 col-lg-4  order-1 order-lg-2 ">
+            <div class="  d-flex col-md-12 col-lg-4  order-1 order-lg-2 " id="lgMiddleCard">
+<div class="seventyFivePercentOfSize">
 
+<div class="scaleable-wrapper" >
 
-<div class="scaleable-wrapper  " >
-
-                            <div class="aCard">
+                            <div class="aCard" id="shapeCardsOriginalScale">
                               <div class="topRightRibbonArea">
 
 
@@ -510,13 +510,13 @@ in 4.3.1 need use order and offset
                                 </div>
                               </div>
 
-
+</div>
               </div>
             </div>
 
-            <div class="  d-flex col-sm-12 col-md-6 col-lg-4  order-2 order-lg-1">
+            <div class="  d-flex col-sm-12 col-md-6 col-lg-4  order-2 order-lg-1" id="lgLeftCard">
 
-
+<div class="seventyFivePercentOfSize">
 <div class="scaleable-wrapper" >
                           <div class="aCard">
                             <div class="topRightRibbonArea">
@@ -559,11 +559,11 @@ in 4.3.1 need use order and offset
 
               </div>
               </div>
-            </div>
+            </div>  </div>
 
-            <div class=" d-flex  col-xs-12 col-md-6 col-lg-4  order-3 order-lg-3 ">
+            <div class=" d-flex  col-xs-12 col-md-6 col-lg-4  order-3 order-lg-3 " id="lgRightCard">
 
-
+<div class="seventyFivePercentOfSize">
 <div class="scaleable-wrapper" >
                           <div class="aCard">
                             <div class="topRightRibbonArea">
@@ -609,7 +609,7 @@ in 4.3.1 need use order and offset
 </div>
 
 
-          </div>
+          </div>      </div>
 
 
         </div>
