--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -462,6 +462,9 @@ height: 100px;
     yellow, yellow, white);
 }
 
+.seventyFivePercentOfSize{margin: 0 auto auto auto;width:75%; height:75%;position:relative;}
+/*.fullSize{width:100%;height:100%;position:relative;}*/
+
 .noScroll {
   overflow-y: hidden;
   overflow-x: hidden;
