--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -640,10 +640,10 @@ in 4.3.1 need use order and offset
 
 
       <div class="row  " id="firstRowCornerNav">
-        <div class="col-sm-4" data-toggle="tooltip" data-placement="right" title="Under construction">
-          <i class="fas fa-expand-arrows-alt corner-links" id="carouselOrFloatingBubbleMediaButtons"></i>
+        <div class="col-sm-4 " data-toggle="tooltip" data-placement="right" title="Under construction">
+          <i class="fas fa-expand-arrows-alt corner-links hoverYellow" id="carouselOrFloatingBubbleMediaButtons"></i>
         </div>
-        <div class="col-sm-4" data-toggle="tooltip" data-placement="right" title="contact me link">
+        <div class="col-sm-4 " data-toggle="tooltip" data-placement="right" title="contact me link">
           <!--replace with other website contact form-->
           <a href="mailto:philip.r.tate@gmail.com?&subject=Cool%20website%20we%20want%20to%20offer%20you%20a%20job&body=Amazing%20job%20goes%20here!">
           <i class="far fa-envelope corner-links"></i></a>
@@ -651,11 +651,11 @@ in 4.3.1 need use order and offset
 
 
         </div>
-        <div class="col-sm-4" data-toggle="tooltip" data-placement="right" title="Just a refreshment while you browse">
+        <div class="col-sm-4 " data-toggle="tooltip" data-placement="right" title="Just a refreshment while you browse">
           <!--later will change source to the image they picked-->
 
-          <img id="chosen-beverage" class="corner-links " src="Images/tea.png" alt="tea" >
-<!--     <a href="https://github.com/phy5prt/CV">--> <!--this is wrong place but it works-->
+          <img id="chosen-beverage" class="corner-links hoverImageYellow " src="Images/tea.png" alt="tea" >
+<!--     <a href="https://github.com/phy5prt/CV">--> <!--this isho wrong place but it works-->
 
         </div>
       </div>
