--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1939,6 +1939,7 @@ vertical-align: top;
 
 
 }
+.cardTechlinksImg:hover  {  box-shadow: inset 0 0 5px 3px yellow, 0 0 5px 2px yellow;}
 .cardHyperlinksImg{
 
 width:18px;
@@ -1956,6 +1957,8 @@ background-color:rgba(255, 255, 0, 0.7);
   box-shadow:  0 0 5px 2px    yellow;
 
 }
+
+.cardHyperlinksImg:hover{      box-shadow:inset 0 0 5px 3px plum, 0 0 5px 2px plum;}
 /*
 .cardHyperlinkImg img{
 vertical-align: top;
