noHover class to protext animations

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -263,7 +263,7 @@ maybe even ajoining a space for the marble
 
       <!--lots issues with animations and transforms on same object overwriting so a
 div for x axis one for y and the image itself for spin-->
-      <div class="philProfileMarble aMarble" value="Me" id="myMarble">
+      <div class="philProfileMarble aMarble noHover" value="Me" id="myMarble">
 
 
         <div class="philProfileMarbleY">
